Harvester/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    DTYPE_2PARAM

Grammar

Rule 0     S' -> root
Rule 1     root -> tableBlock moreBlocks moreAlterBlocks
Rule 2     moreBlocks -> moreBlocks tableBlock
Rule 3     moreBlocks -> empty
Rule 4     tableBlock -> tableHeader attributeBlock moreAttributes moreCheckBlocks RPAREN SEMICOLON moreSequenceBlocks
Rule 5     moreAttributes -> moreAttributes attributeBlock
Rule 6     moreAttributes -> empty
Rule 7     tableHeader -> CREATE TABLE IDENTIFIER LPAREN
Rule 8     attributeBlock -> attributeName dtypes COMMA
Rule 9     attributeBlock -> attributeName dtypes constraintPart COMMA
Rule 10    attributeBlock -> attributeName dtypes
Rule 11    attributeBlock -> attributeName dtypes constraintPart
Rule 12    attributeName -> IDENTIFIER
Rule 13    attributeName -> dtypeNames
Rule 14    attributeName -> DQUOTES IDENTIFIER DQUOTES
Rule 15    attributeName -> DQUOTES dtypeNames DQUOTES
Rule 16    dtypes -> dtype moreDimensions
Rule 17    dtype -> dtypeSolo
Rule 18    dtype -> dtypeTwopart
Rule 19    dtype -> dtypeTimezone
Rule 20    dtypeNames -> DTYPE_SOLO
Rule 21    dtypeNames -> DTYPE_BOTH_1PARAM
Rule 22    dtypeNames -> DTYPE_SOLO_1PARAM2
Rule 23    dtypeNames -> DTYPE_TIMEZONE_PARAM
Rule 24    dtypeNames -> DTYPE_PART2
Rule 25    dtypeNames -> DTYPE_PART1
Rule 26    dtypeSolo -> DTYPE_SOLO
Rule 27    dtypeSolo -> DTYPE_BOTH_1PARAM
Rule 28    dtypeSolo -> DTYPE_SOLO_1PARAM2
Rule 29    dtypeSolo -> DTYPE_BOTH_1PARAM LPAREN parameter RPAREN
Rule 30    dtypeSolo -> DTYPE_SOLO_1PARAM2 LPAREN parameter RPAREN
Rule 31    dtypeSolo -> DTYPE_SOLO_1PARAM2 LPAREN parameter COMMA parameter RPAREN
Rule 32    dtypeTwopart -> DTYPE_BOTH_1PARAM DTYPE_PART2
Rule 33    dtypeTwopart -> DTYPE_PART1 DTYPE_PART2
Rule 34    dtypeTwopart -> DTYPE_BOTH_1PARAM DTYPE_PART2 LPAREN parameter RPAREN
Rule 35    dtypeTimezone -> DTYPE_TIMEZONE_PARAM LPAREN parameter RPAREN
Rule 36    dtypeTimezone -> DTYPE_TIMEZONE_PARAM IDENTIFIER DTYPE_TIMEZONE_PARAM IDENTIFIER
Rule 37    dtypeTimezone -> DTYPE_TIMEZONE_PARAM LPAREN parameter RPAREN IDENTIFIER DTYPE_TIMEZONE_PARAM IDENTIFIER
Rule 38    moreDimensions -> moreDimensions oneDimension
Rule 39    moreDimensions -> empty
Rule 40    oneDimension -> LBRACKET RBRACKET
Rule 41    oneDimension -> LBRACKET NUMBER RBRACKET
Rule 42    constraintPart -> constraintPart constraints
Rule 43    constraintPart -> empty
Rule 44    constraints -> NOT NULL
Rule 45    constraints -> NULL
Rule 46    constraints -> UNIQUE
Rule 47    constraints -> DEFAULT NUMBER
Rule 48    constraints -> DEFAULT QUOTE QUOTE
Rule 49    constraints -> DEFAULT QUOTE inquote QUOTE
Rule 50    constraints -> DEFAULT LPAREN NUMBER RPAREN
Rule 51    parameter -> NUMBER
Rule 52    inquote -> NUMBER
Rule 53    inquote -> IDENTIFIER
Rule 54    moreCheckBlocks -> moreCheckBlocks checkBlock
Rule 55    moreCheckBlocks -> empty
Rule 56    checkBlock -> CONSTRAINT IDENTIFIER CHECK CHECKATTR
Rule 57    checkBlock -> CONSTRAINT IDENTIFIER CHECK CHECKATTR COMMA
Rule 58    moreSequenceBlocks -> moreSequenceBlocks sequenceBlock
Rule 59    moreSequenceBlocks -> empty
Rule 60    sequenceBlock -> SEQUENCE IDENTIFIER OWNED BY IDENTIFIER PERIOD IDENTIFIER SEMICOLON
Rule 61    moreAlterBlocks -> moreAlterBlocks alterBlock
Rule 62    moreAlterBlocks -> empty
Rule 63    alterBlock -> alterHeader alterBody SEMICOLON
Rule 64    alterHeader -> ALTER TABLE ONLY IDENTIFIER
Rule 65    alterBody -> ADD CONSTRAINT IDENTIFIER PRIMARY KEY LPAREN idOrDtypeName RPAREN
Rule 66    alterBody -> ADD CONSTRAINT IDENTIFIER FOREIGN KEY LPAREN idOrDtypeName RPAREN REFERENCES IDENTIFIER LPAREN IDENTIFIER RPAREN
Rule 67    alterBody -> multi_attr_constr
Rule 68    idOrDtypeName -> IDENTIFIER
Rule 69    idOrDtypeName -> dtypeNames
Rule 70    multi_attr_constr -> ADD CONSTRAINT IDENTIFIER UNIQUE LPAREN multi_params RPAREN
Rule 71    multi_attr_constr -> ADD CONSTRAINT IDENTIFIER PRIMARY KEY LPAREN multi_params RPAREN
Rule 72    multi_params -> multi_1param multi_params
Rule 73    multi_params -> empty
Rule 74    multi_1param -> idOrDtypeName COMMA
Rule 75    multi_1param -> idOrDtypeName
Rule 76    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 65 66 70 71
ALTER                : 64
BY                   : 60
CHECK                : 56 57
CHECKATTR            : 56 57
COMMA                : 8 9 31 57 74
CONSTRAINT           : 56 57 65 66 70 71
CREATE               : 7
DEFAULT              : 47 48 49 50
DQUOTES              : 14 14 15 15
DTYPE_2PARAM         : 
DTYPE_BOTH_1PARAM    : 21 27 29 32 34
DTYPE_PART1          : 25 33
DTYPE_PART2          : 24 32 33 34
DTYPE_SOLO           : 20 26
DTYPE_SOLO_1PARAM2   : 22 28 30 31
DTYPE_TIMEZONE_PARAM : 23 35 36 36 37 37
FOREIGN              : 66
IDENTIFIER           : 7 12 14 36 36 37 37 53 56 57 60 60 60 64 65 66 66 66 68 70 71
KEY                  : 65 66 71
LBRACKET             : 40 41
LPAREN               : 7 29 30 31 34 35 37 50 65 66 66 70 71
NOT                  : 44
NULL                 : 44 45
NUMBER               : 41 47 50 51 52
ONLY                 : 64
OWNED                : 60
PERIOD               : 60
PRIMARY              : 65 71
QUOTE                : 48 48 49 49
RBRACKET             : 40 41
REFERENCES           : 66
RPAREN               : 4 29 30 31 34 35 37 50 65 66 66 70 71
SEMICOLON            : 4 60 63
SEQUENCE             : 60
TABLE                : 7 64
UNIQUE               : 46 70
error                : 

Nonterminals, with rules where they appear

alterBlock           : 61
alterBody            : 63
alterHeader          : 63
attributeBlock       : 4 5
attributeName        : 8 9 10 11
checkBlock           : 54
constraintPart       : 9 11 42
constraints          : 42
dtype                : 16
dtypeNames           : 13 15 69
dtypeSolo            : 17
dtypeTimezone        : 19
dtypeTwopart         : 18
dtypes               : 8 9 10 11
empty                : 3 6 39 43 55 59 62 73
idOrDtypeName        : 65 66 74 75
inquote              : 49
moreAlterBlocks      : 1 61
moreAttributes       : 4 5
moreBlocks           : 1 2
moreCheckBlocks      : 4 54
moreDimensions       : 16 38
moreSequenceBlocks   : 4 58
multi_1param         : 72
multi_attr_constr    : 67
multi_params         : 70 71 72
oneDimension         : 38
parameter            : 29 30 31 31 34 35 37
root                 : 0
sequenceBlock        : 58
tableBlock           : 1 2
tableHeader          : 4

Parsing method: LALR

state 0

    (0) S' -> . root
    (1) root -> . tableBlock moreBlocks moreAlterBlocks
    (4) tableBlock -> . tableHeader attributeBlock moreAttributes moreCheckBlocks RPAREN SEMICOLON moreSequenceBlocks
    (7) tableHeader -> . CREATE TABLE IDENTIFIER LPAREN

    CREATE          shift and go to state 3

    tableHeader                    shift and go to state 1
    tableBlock                     shift and go to state 2
    root                           shift and go to state 4

state 1

    (4) tableBlock -> tableHeader . attributeBlock moreAttributes moreCheckBlocks RPAREN SEMICOLON moreSequenceBlocks
    (8) attributeBlock -> . attributeName dtypes COMMA
    (9) attributeBlock -> . attributeName dtypes constraintPart COMMA
    (10) attributeBlock -> . attributeName dtypes
    (11) attributeBlock -> . attributeName dtypes constraintPart
    (12) attributeName -> . IDENTIFIER
    (13) attributeName -> . dtypeNames
    (14) attributeName -> . DQUOTES IDENTIFIER DQUOTES
    (15) attributeName -> . DQUOTES dtypeNames DQUOTES
    (20) dtypeNames -> . DTYPE_SOLO
    (21) dtypeNames -> . DTYPE_BOTH_1PARAM
    (22) dtypeNames -> . DTYPE_SOLO_1PARAM2
    (23) dtypeNames -> . DTYPE_TIMEZONE_PARAM
    (24) dtypeNames -> . DTYPE_PART2
    (25) dtypeNames -> . DTYPE_PART1

    IDENTIFIER      shift and go to state 13
    DQUOTES         shift and go to state 7
    DTYPE_SOLO      shift and go to state 8
    DTYPE_BOTH_1PARAM shift and go to state 14
    DTYPE_SOLO_1PARAM2 shift and go to state 6
    DTYPE_TIMEZONE_PARAM shift and go to state 15
    DTYPE_PART2     shift and go to state 12
    DTYPE_PART1     shift and go to state 5

    dtypeNames                     shift and go to state 11
    attributeName                  shift and go to state 9
    attributeBlock                 shift and go to state 10

state 2

    (1) root -> tableBlock . moreBlocks moreAlterBlocks
    (2) moreBlocks -> . moreBlocks tableBlock
    (3) moreBlocks -> . empty
    (76) empty -> .

    CREATE          reduce using rule 76 (empty -> .)
    ALTER           reduce using rule 76 (empty -> .)
    $end            reduce using rule 76 (empty -> .)

    empty                          shift and go to state 16
    moreBlocks                     shift and go to state 17

state 3

    (7) tableHeader -> CREATE . TABLE IDENTIFIER LPAREN

    TABLE           shift and go to state 18


state 4

    (0) S' -> root .



state 5

    (25) dtypeNames -> DTYPE_PART1 .

    COMMA           reduce using rule 25 (dtypeNames -> DTYPE_PART1 .)
    IDENTIFIER      reduce using rule 25 (dtypeNames -> DTYPE_PART1 .)
    DTYPE_SOLO      reduce using rule 25 (dtypeNames -> DTYPE_PART1 .)
    DTYPE_BOTH_1PARAM reduce using rule 25 (dtypeNames -> DTYPE_PART1 .)
    DTYPE_SOLO_1PARAM2 reduce using rule 25 (dtypeNames -> DTYPE_PART1 .)
    DTYPE_TIMEZONE_PARAM reduce using rule 25 (dtypeNames -> DTYPE_PART1 .)
    DTYPE_PART2     reduce using rule 25 (dtypeNames -> DTYPE_PART1 .)
    DTYPE_PART1     reduce using rule 25 (dtypeNames -> DTYPE_PART1 .)
    RPAREN          reduce using rule 25 (dtypeNames -> DTYPE_PART1 .)
    DQUOTES         reduce using rule 25 (dtypeNames -> DTYPE_PART1 .)


state 6

    (22) dtypeNames -> DTYPE_SOLO_1PARAM2 .

    COMMA           reduce using rule 22 (dtypeNames -> DTYPE_SOLO_1PARAM2 .)
    IDENTIFIER      reduce using rule 22 (dtypeNames -> DTYPE_SOLO_1PARAM2 .)
    DTYPE_SOLO      reduce using rule 22 (dtypeNames -> DTYPE_SOLO_1PARAM2 .)
    DTYPE_BOTH_1PARAM reduce using rule 22 (dtypeNames -> DTYPE_SOLO_1PARAM2 .)
    DTYPE_SOLO_1PARAM2 reduce using rule 22 (dtypeNames -> DTYPE_SOLO_1PARAM2 .)
    DTYPE_TIMEZONE_PARAM reduce using rule 22 (dtypeNames -> DTYPE_SOLO_1PARAM2 .)
    DTYPE_PART2     reduce using rule 22 (dtypeNames -> DTYPE_SOLO_1PARAM2 .)
    DTYPE_PART1     reduce using rule 22 (dtypeNames -> DTYPE_SOLO_1PARAM2 .)
    RPAREN          reduce using rule 22 (dtypeNames -> DTYPE_SOLO_1PARAM2 .)
    DQUOTES         reduce using rule 22 (dtypeNames -> DTYPE_SOLO_1PARAM2 .)


state 7

    (14) attributeName -> DQUOTES . IDENTIFIER DQUOTES
    (15) attributeName -> DQUOTES . dtypeNames DQUOTES
    (20) dtypeNames -> . DTYPE_SOLO
    (21) dtypeNames -> . DTYPE_BOTH_1PARAM
    (22) dtypeNames -> . DTYPE_SOLO_1PARAM2
    (23) dtypeNames -> . DTYPE_TIMEZONE_PARAM
    (24) dtypeNames -> . DTYPE_PART2
    (25) dtypeNames -> . DTYPE_PART1

    IDENTIFIER      shift and go to state 20
    DTYPE_SOLO      shift and go to state 8
    DTYPE_BOTH_1PARAM shift and go to state 14
    DTYPE_SOLO_1PARAM2 shift and go to state 6
    DTYPE_TIMEZONE_PARAM shift and go to state 15
    DTYPE_PART2     shift and go to state 12
    DTYPE_PART1     shift and go to state 5

    dtypeNames                     shift and go to state 19

state 8

    (20) dtypeNames -> DTYPE_SOLO .

    COMMA           reduce using rule 20 (dtypeNames -> DTYPE_SOLO .)
    IDENTIFIER      reduce using rule 20 (dtypeNames -> DTYPE_SOLO .)
    DTYPE_SOLO      reduce using rule 20 (dtypeNames -> DTYPE_SOLO .)
    DTYPE_BOTH_1PARAM reduce using rule 20 (dtypeNames -> DTYPE_SOLO .)
    DTYPE_SOLO_1PARAM2 reduce using rule 20 (dtypeNames -> DTYPE_SOLO .)
    DTYPE_TIMEZONE_PARAM reduce using rule 20 (dtypeNames -> DTYPE_SOLO .)
    DTYPE_PART2     reduce using rule 20 (dtypeNames -> DTYPE_SOLO .)
    DTYPE_PART1     reduce using rule 20 (dtypeNames -> DTYPE_SOLO .)
    RPAREN          reduce using rule 20 (dtypeNames -> DTYPE_SOLO .)
    DQUOTES         reduce using rule 20 (dtypeNames -> DTYPE_SOLO .)


state 9

    (8) attributeBlock -> attributeName . dtypes COMMA
    (9) attributeBlock -> attributeName . dtypes constraintPart COMMA
    (10) attributeBlock -> attributeName . dtypes
    (11) attributeBlock -> attributeName . dtypes constraintPart
    (16) dtypes -> . dtype moreDimensions
    (17) dtype -> . dtypeSolo
    (18) dtype -> . dtypeTwopart
    (19) dtype -> . dtypeTimezone
    (26) dtypeSolo -> . DTYPE_SOLO
    (27) dtypeSolo -> . DTYPE_BOTH_1PARAM
    (28) dtypeSolo -> . DTYPE_SOLO_1PARAM2
    (29) dtypeSolo -> . DTYPE_BOTH_1PARAM LPAREN parameter RPAREN
    (30) dtypeSolo -> . DTYPE_SOLO_1PARAM2 LPAREN parameter RPAREN
    (31) dtypeSolo -> . DTYPE_SOLO_1PARAM2 LPAREN parameter COMMA parameter RPAREN
    (32) dtypeTwopart -> . DTYPE_BOTH_1PARAM DTYPE_PART2
    (33) dtypeTwopart -> . DTYPE_PART1 DTYPE_PART2
    (34) dtypeTwopart -> . DTYPE_BOTH_1PARAM DTYPE_PART2 LPAREN parameter RPAREN
    (35) dtypeTimezone -> . DTYPE_TIMEZONE_PARAM LPAREN parameter RPAREN
    (36) dtypeTimezone -> . DTYPE_TIMEZONE_PARAM IDENTIFIER DTYPE_TIMEZONE_PARAM IDENTIFIER
    (37) dtypeTimezone -> . DTYPE_TIMEZONE_PARAM LPAREN parameter RPAREN IDENTIFIER DTYPE_TIMEZONE_PARAM IDENTIFIER

    DTYPE_SOLO      shift and go to state 28
    DTYPE_BOTH_1PARAM shift and go to state 29
    DTYPE_SOLO_1PARAM2 shift and go to state 25
    DTYPE_PART1     shift and go to state 22
    DTYPE_TIMEZONE_PARAM shift and go to state 30

    dtypeTimezone                  shift and go to state 21
    dtypeTwopart                   shift and go to state 23
    dtype                          shift and go to state 24
    dtypeSolo                      shift and go to state 26
    dtypes                         shift and go to state 27

state 10

    (4) tableBlock -> tableHeader attributeBlock . moreAttributes moreCheckBlocks RPAREN SEMICOLON moreSequenceBlocks
    (5) moreAttributes -> . moreAttributes attributeBlock
    (6) moreAttributes -> . empty
    (76) empty -> .

    IDENTIFIER      reduce using rule 76 (empty -> .)
    DQUOTES         reduce using rule 76 (empty -> .)
    DTYPE_SOLO      reduce using rule 76 (empty -> .)
    DTYPE_BOTH_1PARAM reduce using rule 76 (empty -> .)
    DTYPE_SOLO_1PARAM2 reduce using rule 76 (empty -> .)
    DTYPE_TIMEZONE_PARAM reduce using rule 76 (empty -> .)
    DTYPE_PART2     reduce using rule 76 (empty -> .)
    DTYPE_PART1     reduce using rule 76 (empty -> .)
    RPAREN          reduce using rule 76 (empty -> .)
    CONSTRAINT      reduce using rule 76 (empty -> .)

    moreAttributes                 shift and go to state 31
    empty                          shift and go to state 32

state 11

    (13) attributeName -> dtypeNames .

    DTYPE_SOLO      reduce using rule 13 (attributeName -> dtypeNames .)
    DTYPE_BOTH_1PARAM reduce using rule 13 (attributeName -> dtypeNames .)
    DTYPE_SOLO_1PARAM2 reduce using rule 13 (attributeName -> dtypeNames .)
    DTYPE_PART1     reduce using rule 13 (attributeName -> dtypeNames .)
    DTYPE_TIMEZONE_PARAM reduce using rule 13 (attributeName -> dtypeNames .)


state 12

    (24) dtypeNames -> DTYPE_PART2 .

    COMMA           reduce using rule 24 (dtypeNames -> DTYPE_PART2 .)
    IDENTIFIER      reduce using rule 24 (dtypeNames -> DTYPE_PART2 .)
    DTYPE_SOLO      reduce using rule 24 (dtypeNames -> DTYPE_PART2 .)
    DTYPE_BOTH_1PARAM reduce using rule 24 (dtypeNames -> DTYPE_PART2 .)
    DTYPE_SOLO_1PARAM2 reduce using rule 24 (dtypeNames -> DTYPE_PART2 .)
    DTYPE_TIMEZONE_PARAM reduce using rule 24 (dtypeNames -> DTYPE_PART2 .)
    DTYPE_PART2     reduce using rule 24 (dtypeNames -> DTYPE_PART2 .)
    DTYPE_PART1     reduce using rule 24 (dtypeNames -> DTYPE_PART2 .)
    RPAREN          reduce using rule 24 (dtypeNames -> DTYPE_PART2 .)
    DQUOTES         reduce using rule 24 (dtypeNames -> DTYPE_PART2 .)


state 13

    (12) attributeName -> IDENTIFIER .

    DTYPE_SOLO      reduce using rule 12 (attributeName -> IDENTIFIER .)
    DTYPE_BOTH_1PARAM reduce using rule 12 (attributeName -> IDENTIFIER .)
    DTYPE_SOLO_1PARAM2 reduce using rule 12 (attributeName -> IDENTIFIER .)
    DTYPE_PART1     reduce using rule 12 (attributeName -> IDENTIFIER .)
    DTYPE_TIMEZONE_PARAM reduce using rule 12 (attributeName -> IDENTIFIER .)


state 14

    (21) dtypeNames -> DTYPE_BOTH_1PARAM .

    COMMA           reduce using rule 21 (dtypeNames -> DTYPE_BOTH_1PARAM .)
    IDENTIFIER      reduce using rule 21 (dtypeNames -> DTYPE_BOTH_1PARAM .)
    DTYPE_SOLO      reduce using rule 21 (dtypeNames -> DTYPE_BOTH_1PARAM .)
    DTYPE_BOTH_1PARAM reduce using rule 21 (dtypeNames -> DTYPE_BOTH_1PARAM .)
    DTYPE_SOLO_1PARAM2 reduce using rule 21 (dtypeNames -> DTYPE_BOTH_1PARAM .)
    DTYPE_TIMEZONE_PARAM reduce using rule 21 (dtypeNames -> DTYPE_BOTH_1PARAM .)
    DTYPE_PART2     reduce using rule 21 (dtypeNames -> DTYPE_BOTH_1PARAM .)
    DTYPE_PART1     reduce using rule 21 (dtypeNames -> DTYPE_BOTH_1PARAM .)
    RPAREN          reduce using rule 21 (dtypeNames -> DTYPE_BOTH_1PARAM .)
    DQUOTES         reduce using rule 21 (dtypeNames -> DTYPE_BOTH_1PARAM .)


state 15

    (23) dtypeNames -> DTYPE_TIMEZONE_PARAM .

    COMMA           reduce using rule 23 (dtypeNames -> DTYPE_TIMEZONE_PARAM .)
    IDENTIFIER      reduce using rule 23 (dtypeNames -> DTYPE_TIMEZONE_PARAM .)
    DTYPE_SOLO      reduce using rule 23 (dtypeNames -> DTYPE_TIMEZONE_PARAM .)
    DTYPE_BOTH_1PARAM reduce using rule 23 (dtypeNames -> DTYPE_TIMEZONE_PARAM .)
    DTYPE_SOLO_1PARAM2 reduce using rule 23 (dtypeNames -> DTYPE_TIMEZONE_PARAM .)
    DTYPE_TIMEZONE_PARAM reduce using rule 23 (dtypeNames -> DTYPE_TIMEZONE_PARAM .)
    DTYPE_PART2     reduce using rule 23 (dtypeNames -> DTYPE_TIMEZONE_PARAM .)
    DTYPE_PART1     reduce using rule 23 (dtypeNames -> DTYPE_TIMEZONE_PARAM .)
    RPAREN          reduce using rule 23 (dtypeNames -> DTYPE_TIMEZONE_PARAM .)
    DQUOTES         reduce using rule 23 (dtypeNames -> DTYPE_TIMEZONE_PARAM .)


state 16

    (3) moreBlocks -> empty .

    CREATE          reduce using rule 3 (moreBlocks -> empty .)
    ALTER           reduce using rule 3 (moreBlocks -> empty .)
    $end            reduce using rule 3 (moreBlocks -> empty .)


state 17

    (1) root -> tableBlock moreBlocks . moreAlterBlocks
    (2) moreBlocks -> moreBlocks . tableBlock
    (61) moreAlterBlocks -> . moreAlterBlocks alterBlock
    (62) moreAlterBlocks -> . empty
    (4) tableBlock -> . tableHeader attributeBlock moreAttributes moreCheckBlocks RPAREN SEMICOLON moreSequenceBlocks
    (76) empty -> .
    (7) tableHeader -> . CREATE TABLE IDENTIFIER LPAREN

    ALTER           reduce using rule 76 (empty -> .)
    $end            reduce using rule 76 (empty -> .)
    CREATE          shift and go to state 3

    tableHeader                    shift and go to state 1
    moreAlterBlocks                shift and go to state 33
    tableBlock                     shift and go to state 34
    empty                          shift and go to state 35

state 18

    (7) tableHeader -> CREATE TABLE . IDENTIFIER LPAREN

    IDENTIFIER      shift and go to state 36


state 19

    (15) attributeName -> DQUOTES dtypeNames . DQUOTES

    DQUOTES         shift and go to state 37


state 20

    (14) attributeName -> DQUOTES IDENTIFIER . DQUOTES

    DQUOTES         shift and go to state 38


state 21

    (19) dtype -> dtypeTimezone .

    LBRACKET        reduce using rule 19 (dtype -> dtypeTimezone .)
    COMMA           reduce using rule 19 (dtype -> dtypeTimezone .)
    NOT             reduce using rule 19 (dtype -> dtypeTimezone .)
    NULL            reduce using rule 19 (dtype -> dtypeTimezone .)
    UNIQUE          reduce using rule 19 (dtype -> dtypeTimezone .)
    DEFAULT         reduce using rule 19 (dtype -> dtypeTimezone .)
    IDENTIFIER      reduce using rule 19 (dtype -> dtypeTimezone .)
    DQUOTES         reduce using rule 19 (dtype -> dtypeTimezone .)
    DTYPE_SOLO      reduce using rule 19 (dtype -> dtypeTimezone .)
    DTYPE_BOTH_1PARAM reduce using rule 19 (dtype -> dtypeTimezone .)
    DTYPE_SOLO_1PARAM2 reduce using rule 19 (dtype -> dtypeTimezone .)
    DTYPE_TIMEZONE_PARAM reduce using rule 19 (dtype -> dtypeTimezone .)
    DTYPE_PART2     reduce using rule 19 (dtype -> dtypeTimezone .)
    DTYPE_PART1     reduce using rule 19 (dtype -> dtypeTimezone .)
    RPAREN          reduce using rule 19 (dtype -> dtypeTimezone .)
    CONSTRAINT      reduce using rule 19 (dtype -> dtypeTimezone .)


state 22

    (33) dtypeTwopart -> DTYPE_PART1 . DTYPE_PART2

    DTYPE_PART2     shift and go to state 39


state 23

    (18) dtype -> dtypeTwopart .

    LBRACKET        reduce using rule 18 (dtype -> dtypeTwopart .)
    COMMA           reduce using rule 18 (dtype -> dtypeTwopart .)
    NOT             reduce using rule 18 (dtype -> dtypeTwopart .)
    NULL            reduce using rule 18 (dtype -> dtypeTwopart .)
    UNIQUE          reduce using rule 18 (dtype -> dtypeTwopart .)
    DEFAULT         reduce using rule 18 (dtype -> dtypeTwopart .)
    IDENTIFIER      reduce using rule 18 (dtype -> dtypeTwopart .)
    DQUOTES         reduce using rule 18 (dtype -> dtypeTwopart .)
    DTYPE_SOLO      reduce using rule 18 (dtype -> dtypeTwopart .)
    DTYPE_BOTH_1PARAM reduce using rule 18 (dtype -> dtypeTwopart .)
    DTYPE_SOLO_1PARAM2 reduce using rule 18 (dtype -> dtypeTwopart .)
    DTYPE_TIMEZONE_PARAM reduce using rule 18 (dtype -> dtypeTwopart .)
    DTYPE_PART2     reduce using rule 18 (dtype -> dtypeTwopart .)
    DTYPE_PART1     reduce using rule 18 (dtype -> dtypeTwopart .)
    RPAREN          reduce using rule 18 (dtype -> dtypeTwopart .)
    CONSTRAINT      reduce using rule 18 (dtype -> dtypeTwopart .)


state 24

    (16) dtypes -> dtype . moreDimensions
    (38) moreDimensions -> . moreDimensions oneDimension
    (39) moreDimensions -> . empty
    (76) empty -> .

    LBRACKET        reduce using rule 76 (empty -> .)
    COMMA           reduce using rule 76 (empty -> .)
    NOT             reduce using rule 76 (empty -> .)
    NULL            reduce using rule 76 (empty -> .)
    UNIQUE          reduce using rule 76 (empty -> .)
    DEFAULT         reduce using rule 76 (empty -> .)
    IDENTIFIER      reduce using rule 76 (empty -> .)
    DQUOTES         reduce using rule 76 (empty -> .)
    DTYPE_SOLO      reduce using rule 76 (empty -> .)
    DTYPE_BOTH_1PARAM reduce using rule 76 (empty -> .)
    DTYPE_SOLO_1PARAM2 reduce using rule 76 (empty -> .)
    DTYPE_TIMEZONE_PARAM reduce using rule 76 (empty -> .)
    DTYPE_PART2     reduce using rule 76 (empty -> .)
    DTYPE_PART1     reduce using rule 76 (empty -> .)
    RPAREN          reduce using rule 76 (empty -> .)
    CONSTRAINT      reduce using rule 76 (empty -> .)

    moreDimensions                 shift and go to state 40
    empty                          shift and go to state 41

state 25

    (28) dtypeSolo -> DTYPE_SOLO_1PARAM2 .
    (30) dtypeSolo -> DTYPE_SOLO_1PARAM2 . LPAREN parameter RPAREN
    (31) dtypeSolo -> DTYPE_SOLO_1PARAM2 . LPAREN parameter COMMA parameter RPAREN

    LBRACKET        reduce using rule 28 (dtypeSolo -> DTYPE_SOLO_1PARAM2 .)
    COMMA           reduce using rule 28 (dtypeSolo -> DTYPE_SOLO_1PARAM2 .)
    NOT             reduce using rule 28 (dtypeSolo -> DTYPE_SOLO_1PARAM2 .)
    NULL            reduce using rule 28 (dtypeSolo -> DTYPE_SOLO_1PARAM2 .)
    UNIQUE          reduce using rule 28 (dtypeSolo -> DTYPE_SOLO_1PARAM2 .)
    DEFAULT         reduce using rule 28 (dtypeSolo -> DTYPE_SOLO_1PARAM2 .)
    IDENTIFIER      reduce using rule 28 (dtypeSolo -> DTYPE_SOLO_1PARAM2 .)
    DQUOTES         reduce using rule 28 (dtypeSolo -> DTYPE_SOLO_1PARAM2 .)
    DTYPE_SOLO      reduce using rule 28 (dtypeSolo -> DTYPE_SOLO_1PARAM2 .)
    DTYPE_BOTH_1PARAM reduce using rule 28 (dtypeSolo -> DTYPE_SOLO_1PARAM2 .)
    DTYPE_SOLO_1PARAM2 reduce using rule 28 (dtypeSolo -> DTYPE_SOLO_1PARAM2 .)
    DTYPE_TIMEZONE_PARAM reduce using rule 28 (dtypeSolo -> DTYPE_SOLO_1PARAM2 .)
    DTYPE_PART2     reduce using rule 28 (dtypeSolo -> DTYPE_SOLO_1PARAM2 .)
    DTYPE_PART1     reduce using rule 28 (dtypeSolo -> DTYPE_SOLO_1PARAM2 .)
    RPAREN          reduce using rule 28 (dtypeSolo -> DTYPE_SOLO_1PARAM2 .)
    CONSTRAINT      reduce using rule 28 (dtypeSolo -> DTYPE_SOLO_1PARAM2 .)
    LPAREN          shift and go to state 42


state 26

    (17) dtype -> dtypeSolo .

    LBRACKET        reduce using rule 17 (dtype -> dtypeSolo .)
    COMMA           reduce using rule 17 (dtype -> dtypeSolo .)
    NOT             reduce using rule 17 (dtype -> dtypeSolo .)
    NULL            reduce using rule 17 (dtype -> dtypeSolo .)
    UNIQUE          reduce using rule 17 (dtype -> dtypeSolo .)
    DEFAULT         reduce using rule 17 (dtype -> dtypeSolo .)
    IDENTIFIER      reduce using rule 17 (dtype -> dtypeSolo .)
    DQUOTES         reduce using rule 17 (dtype -> dtypeSolo .)
    DTYPE_SOLO      reduce using rule 17 (dtype -> dtypeSolo .)
    DTYPE_BOTH_1PARAM reduce using rule 17 (dtype -> dtypeSolo .)
    DTYPE_SOLO_1PARAM2 reduce using rule 17 (dtype -> dtypeSolo .)
    DTYPE_TIMEZONE_PARAM reduce using rule 17 (dtype -> dtypeSolo .)
    DTYPE_PART2     reduce using rule 17 (dtype -> dtypeSolo .)
    DTYPE_PART1     reduce using rule 17 (dtype -> dtypeSolo .)
    RPAREN          reduce using rule 17 (dtype -> dtypeSolo .)
    CONSTRAINT      reduce using rule 17 (dtype -> dtypeSolo .)


state 27

    (8) attributeBlock -> attributeName dtypes . COMMA
    (9) attributeBlock -> attributeName dtypes . constraintPart COMMA
    (10) attributeBlock -> attributeName dtypes .
    (11) attributeBlock -> attributeName dtypes . constraintPart
    (42) constraintPart -> . constraintPart constraints
    (43) constraintPart -> . empty
    (76) empty -> .
